Implemented the block and email actions
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40704

--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/TOne.WhS.AccountBalance.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/TOne.WhS.AccountBalance.Web.csproj
@@ -146,10 +146,12 @@
     <Content Include="WhS_AccountBalance\Constant\FinancialAccountCarrierTypeEnum.js" />
     <Content Include="WhS_AccountBalance\Constant\FinancialAccountEffectiveStatusEnum.js" />
     <Content Include="WhS_AccountBalance\Constant\ModuleConfig.js" />
-    <Content Include="WhS_AccountBalance\Elements\AccountBalanceActions\BlockCustomerAction\Directives\Templates\SendCustomerEmailAction.html" />
-    <Content Include="WhS_AccountBalance\Elements\AccountBalanceActions\BlockCustomerAction\Directives\whs-accountbalance-action-customer-sendemail.js" />
-    <Content Include="WhS_AccountBalance\Elements\AccountBalanceActions\SendCustomerEmailAction\Directives\Templates\BlockCustomerAction.html" />
-    <Content Include="WhS_AccountBalance\Elements\AccountBalanceActions\SendCustomerEmailAction\Directives\whs-accountbalance-action-customer-block.js" />
+    <Content Include="WhS_AccountBalance\Elements\AccountBalanceActions\BlockCustomerAction\Directives\Templates\BlockCustomerAction.html" />
+    <Content Include="WhS_AccountBalance\Elements\AccountBalanceActions\BlockCustomerAction\Directives\whs-accountbalance-action-customer-block.js" />
+    <Content Include="WhS_AccountBalance\Elements\AccountBalanceActions\SendCustomerEmailAction\Directives\Templates\SendCustomerEmailAction.html" />
+    <Content Include="WhS_AccountBalance\Elements\AccountBalanceActions\SendCustomerEmailAction\Directives\whs-accountbalance-action-customer-sendemail.js" />
+    <Content Include="WhS_AccountBalance\Elements\AccountBalanceAlertThreshold\Customer\Directive\Template\CustomerTolerancePercentageThreshold.html" />
+    <Content Include="WhS_AccountBalance\Elements\AccountBalanceAlertThreshold\Customer\Directive\whs-accountbalance-threshold-customer-tolerancepercentage.js" />
     <Content Include="WhS_AccountBalance\Elements\AccountType\Directives\AccountTypeFieldSources\Templates\TOneCustomFieldSourceSetting.html" />
     <Content Include="WhS_AccountBalance\Elements\AccountType\Directives\AccountTypeFieldSources\whs-accountbalance-accounttype-source-tonecustomfield.js" />
     <Content Include="WhS_AccountBalance\Elements\FinancialAccount\Directives\FinancialAccountTypes\CustomerPostpaid\Templates\CustomerPostpaidSettings.html" />
@@ -174,10 +176,10 @@
     <Content Include="WhS_AccountBalance\Elements\FinancialAccount\Directives\FinancialAccountTypes\SupplierPrepaid\whs-accountbalance-definition-supplierprepaid.js" />
     <Content Include="WhS_AccountBalance\Elements\FinancialAccount\Directives\BE_Definition\Templates\AccountDefinitionBEEditor.html" />
     <Content Include="WhS_AccountBalance\Elements\FinancialAccount\Directives\FinancialAccount\whs-accountbalance-account-selector.js" />
-    <Content Include="WhS_AccountBalance\Elements\AccountBalanceActions\SendCustomerEmailAction\Directives\Templates\BlockCustomerActionDefinition.html" />
-    <Content Include="WhS_AccountBalance\Elements\AccountBalanceActions\BlockCustomerAction\Directives\Templates\SendCustomerEmailActionDefinition.html" />
-    <Content Include="WhS_AccountBalance\Elements\AccountBalanceActions\BlockCustomerAction\Directives\whs-accountbalance-actiondefinition-customer-sendemail.js" />
-    <Content Include="WhS_AccountBalance\Elements\AccountBalanceActions\SendCustomerEmailAction\Directives\whs-accountbalance-actiondefinition-customer-block.js" />
+    <Content Include="WhS_AccountBalance\Elements\AccountBalanceActions\SendCustomerEmailAction\Directives\Templates\SendCustomerEmailActionDefinition.html" />
+    <Content Include="WhS_AccountBalance\Elements\AccountBalanceActions\BlockCustomerAction\Directives\Templates\BlockCustomerActionDefinition.html" />
+    <Content Include="WhS_AccountBalance\Elements\AccountBalanceActions\BlockCustomerAction\Directives\whs-accountbalance-actiondefinition-customer-block.js" />
+    <Content Include="WhS_AccountBalance\Elements\AccountBalanceActions\SendCustomerEmailAction\Directives\whs-accountbalance-actiondefinition-customer-sendemail.js" />
     <Content Include="WhS_AccountBalance\Elements\FinancialAccount\Directives\BE_Definition\whs-accountbalance-bedefinition-editor.js" />
     <Content Include="WhS_AccountBalance\Elements\FinancialAccount\Directives\Templates\FinancialAccountGridTemplate.html" />
     <Content Include="WhS_AccountBalance\Elements\FinancialAccount\Directives\Templates\FinancialAccountSearch.html" />
