added Pricing Rule Tax
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40707

--- a/Vanrise/Code/Vanrise.Rules.Pricing.MainExtensions/Vanrise.Rules.Pricing.MainExtensions.csproj
+++ b/Vanrise/Code/Vanrise.Rules.Pricing.MainExtensions/Vanrise.Rules.Pricing.MainExtensions.csproj
@@ -50,6 +50,7 @@
     <Compile Include="RateType\SpecificDayRateTypeSettings.cs" />
     <Compile Include="RateValue\FixedRateValueSettings.cs" />
     <Compile Include="Tariff\RegularTariffSettings.cs" />
+    <Compile Include="Tax\PercentageTaxSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Common.Business\Vanrise.Common.Business.csproj">
@@ -73,6 +74,7 @@
       <Name>Vanrise.Rules</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy /y $(TargetPath) ..\..\..\Output</PostBuildEvent>
