--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Entities/TOne.WhS.Sales.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Entities/TOne.WhS.Sales.Entities.csproj
@@ -113,6 +113,7 @@
     <Compile Include="RateManagement\Preview\SaleZoneRoutingProductPreview.cs" />
     <Compile Include="RateManagement\Preview\SaleZoneServicePreview.cs" />
     <Compile Include="RateManagement\Rate\ChangedRate.cs" />
+    <Compile Include="RateManagement\Rate\EffectiveAfterCustomerZoneRatesByZone.cs" />
     <Compile Include="RateManagement\Rate\ExistingRate.cs" />
     <Compile Include="RateManagement\Rate\IProcessRatesContext.cs" />
     <Compile Include="RateManagement\Rate\NewRate.cs" />
