--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.BP.Activities/TOne.WhS.Sales.BP.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.BP.Activities/TOne.WhS.Sales.BP.Activities.csproj
@@ -99,6 +99,7 @@
     <Compile Include="ProcessCustomerCountries.cs" />
     <Compile Include="SavePricelistFiles.cs" />
     <Compile Include="SetContextEffectiveAfterCustomerZoneRatesByZone.cs" />
+    <Compile Include="SetContextIntersectedSellingProductZoneRatesByZone.cs" />
     <Compile Include="SetRatePlanContext.cs" />
     <Compile Include="StructureDefaultData.cs" />
     <Compile Include="PrepareDefaultRoutingProductPreview.cs" />
