--- a/Retail/Code/Retail.BusinessEntity.Web/Retail.BusinessEntity.Web.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail.BusinessEntity.Web.csproj
@@ -215,6 +215,10 @@
     <Content Include="Retail_BusinessEntity\Constant\ModuleConfig.js" />
     <Content Include="Retail_BusinessEntity\Constant\NetworkTypeEnum.js" />
     <Content Include="Retail_BusinessEntity\Constant\WebServiceRequestTypeEnum.js" />
+    <Content Include="Retail_BusinessEntity\Directives\AccountBalanceNotification\retail-be-accountbalancenotificationtype-settings.js" />
+    <Content Include="Retail_BusinessEntity\Directives\AccountBalanceNotification\retail-be-accountbalancenotificationtype-searcheditor.js" />
+    <Content Include="Retail_BusinessEntity\Directives\AccountBalanceNotification\Templates\AccountBalanceNotificationTypeSearchEditorTemplate.html" />
+    <Content Include="Retail_BusinessEntity\Directives\AccountBalanceNotification\Templates\AccountBalanceNotificationTypeSettingsTemplate.html" />
     <Content Include="Retail_BusinessEntity\Directives\AccountCondition\MainExtensions\retail-be-accountcondition-filtergroup.js" />
     <Content Include="Retail_BusinessEntity\Directives\AccountCondition\MainExtensions\retail-be-accountcondition-financialaccount.js" />
     <Content Include="Retail_BusinessEntity\Directives\AccountCondition\MainExtensions\retail-be-accountcondition-subaccount.js" />
