--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Business/TOne.WhS.AccountBalance.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Business/TOne.WhS.AccountBalance.Business.csproj
@@ -72,6 +72,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountBalanceManager.cs" />
+    <Compile Include="AccountBalanceNotification\TOneAccountBalanceNotificationExtendedQuery.cs" />
+    <Compile Include="AccountBalanceNotification\TOneAccountBalanceNotificationTypeSettings.cs" />
     <Compile Include="AccountBalanceSettings.cs" />
     <Compile Include="FinancialAccountBESettings.cs" />
     <Compile Include="FinancialAccountDefinitionManager.cs" />
