--- a/Mediation/Code/Mediation.Runtime/Mediation.Runtime.csproj
+++ b/Mediation/Code/Mediation.Runtime/Mediation.Runtime.csproj
@@ -406,6 +406,10 @@
       <Project>{0455b391-9661-41b7-90f5-f6e14fc30b2d}</Project>
       <Name>Mediation.Generic.QueueActivators</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Mediation.Teles.Business\Mediation.Teles.Business.csproj">
+      <Project>{8dde7260-624a-4e06-ab69-de5fa7742a5d}</Project>
+      <Name>Mediation.Teles.Business</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
