Add new client AlMadar
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40808

--- a/FZero/Vanrise.Fzero.Services.Report/Vanrise.Fzero.Services.Report.csproj
+++ b/FZero/Vanrise.Fzero.Services.Report/Vanrise.Fzero.Services.Report.csproj
@@ -131,6 +131,7 @@
       <DependentUpon>ReportService.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reports\rptDefaultToOperator.rdlc" />
+    <EmbeddedResource Include="Reports\rptToMadarOperator.rdlc" />
     <EmbeddedResource Include="Reports\rptToOperator.rdlc" />
     <EmbeddedResource Include="Reports\rptToOperatorIraqNationalSec.rdlc" />
     <EmbeddedResource Include="Reports\rptToSyrianOperator.rdlc" />
