--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/TOne.WhS.AccountBalance.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/TOne.WhS.AccountBalance.Web.csproj
@@ -160,8 +160,8 @@
     <Content Include="WhS_AccountBalance\Elements\AccountBalanceAlertThreshold\Customer\PrePaid\whs-accountbalance-threshold-customer-fixedthreshold.js" />
     <Content Include="WhS_AccountBalance\Elements\AccountBalanceAlertThreshold\Customer\PostPaid\Template\CustomerTolerancePercentageThreshold.html" />
     <Content Include="WhS_AccountBalance\Elements\AccountBalanceAlertThreshold\Customer\PostPaid\whs-accountbalance-threshold-customer-tolerancepercentage.js" />
-    <Content Include="WhS_AccountBalance\Elements\AccountBalanceNotification\Directives\Template\AccountBalanceNotificationTypeSearchEditorTemplate.html" />
-    <Content Include="WhS_AccountBalance\Elements\AccountBalanceNotification\Directives\Template\AccountBalanceNotificationTypeSettingsTemplate.html" />
+    <Content Include="WhS_AccountBalance\Elements\AccountBalanceNotification\Directives\Templates\AccountBalanceNotificationTypeSearchEditorTemplate.html" />
+    <Content Include="WhS_AccountBalance\Elements\AccountBalanceNotification\Directives\Templates\AccountBalanceNotificationTypeSettingsTemplate.html" />
     <Content Include="WhS_AccountBalance\Elements\AccountBalanceNotification\Directives\whs-accountbalance-notificationtype-searcheditor.js" />
     <Content Include="WhS_AccountBalance\Elements\AccountBalanceNotification\Directives\whs-accountbalance-notificationtype-settings.js" />
     <Content Include="WhS_AccountBalance\Elements\AccountType\Directives\AccountTypeFieldSources\Templates\TOneCustomFieldSourceSetting.html" />
