Adding VRBalanceAlertRuleTypeFilter to Vanrise.Notification.Business
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40823

--- a/Vanrise/Code/Vanrise.Notification.Business/Vanrise.Notification.Business.csproj
+++ b/Vanrise/Code/Vanrise.Notification.Business/Vanrise.Notification.Business.csproj
@@ -50,7 +50,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BPDefinitionExtendedSettings\ExecuteNotificationBPDefinitionExtendedSettings.cs" />
-    <Compile Include="Filters\VRAlertLevelBEDefinitionFilter.cs" />
+    <Compile Include="Filters\IBusinessEntityDefinitionFilter\VRAlertLevelBEDefinitionFilter.cs" />
+    <Compile Include="Filters\IVRAlertRuleTypeFilter\VRBalanceAlertRuleTypeFilter.cs" />
     <Compile Include="VRAlertLevelBEDefinitionSettings.cs" />
     <Compile Include="VRAlertLevelManager.cs" />
     <Compile Include="VRAlertRuleTypeAddOrEditFilter.cs" />
