--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Business/TOne.WhS.Sales.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Business/TOne.WhS.Sales.Business.csproj
@@ -92,6 +92,7 @@
   <ItemGroup>
     <Compile Include="BulkAction\ActionApplicableToZoneContext.cs" />
     <Compile Include="BulkAction\ApplicableZoneIdsContext.cs" />
+    <Compile Include="BulkAction\ApplyBulkActionToDefaultDraftContext.cs" />
     <Compile Include="BulkAction\ApplyBulkActionToZoneDraftContext.cs" />
     <Compile Include="BulkAction\ApplyBulkActionToZoneItemContext.cs" />
     <Compile Include="BulkAction\Input\ContextZoneItemInput.cs" />
