--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Entities/TOne.WhS.Sales.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Entities/TOne.WhS.Sales.Entities.csproj
@@ -173,6 +173,7 @@
     <Compile Include="RatePlanning\CalculatedRate.cs" />
     <Compile Include="RatePlanning\Draft\ZoneChanges.cs" />
     <Compile Include="RatePlanning\Country\SoldCountry.cs" />
+    <Compile Include="RatePlanning\OwnerInfo.cs" />
     <Compile Include="RatePlanning\ZoneItem.cs" />
     <Compile Include="RatePlanning\ZoneRateChangesDetail.cs" />
     <Compile Include="RatePlanning\ZoneRoutingProductChangesDetail.cs" />
