--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.MainExtensions/TOne.WhS.Sales.MainExtensions.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.MainExtensions/TOne.WhS.Sales.MainExtensions.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BulkActions\ActionTypes\BEDBulkActionType.cs" />
+    <Compile Include="BulkActions\ActionTypes\DefaultRoutingProductBulkActionType.cs" />
     <Compile Include="BulkActions\ActionTypes\EEDBulkActionType.cs" />
     <Compile Include="BulkActions\ActionTypes\ImportBulkAction.cs" />
     <Compile Include="BulkActions\ActionTypes\RateBulkAction.cs" />
