Added To Routing Status Extended Settings Switch Customer Blocking info to benefit from it when restoring original statuses on unblock action
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40841

--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Entities/TOne.WhS.AccountBalance.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Entities/TOne.WhS.AccountBalance.Entities.csproj
@@ -69,6 +69,10 @@
       <Project>{0923754d-484c-48f7-9284-be9b6b9d5449}</Project>
       <Name>TOne.WhS.BusinessEntity.Entities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TOne.WhS.RouteSync.Entities\TOne.WhS.RouteSync.Entities.csproj">
+      <Project>{36ea3b9c-5ae0-4fe5-8ec2-8bfd1655776b}</Project>
+      <Name>TOne.WhS.RouteSync.Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
