--- a/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Entities/TOne.WhS.RouteSync.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Entities/TOne.WhS.RouteSync.Entities.csproj
@@ -66,6 +66,7 @@
     <Compile Include="RouteSyncDefinitionQuery.cs" />
     <Compile Include="RouteSyncSettings.cs" />
     <Compile Include="RouteSyncTechnicalSettings.cs" />
+    <Compile Include="Switch\SwitchCustomerBlockingInfo.cs" />
     <Compile Include="Switch\SwitchInfoGetter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RouteEntities\Route.cs" />
