--- a/Vanrise/Code/Vanrise.Common.Business/Vanrise.Common.Business.csproj
+++ b/Vanrise/Code/Vanrise.Common.Business/Vanrise.Common.Business.csproj
@@ -68,6 +68,8 @@
     <Compile Include="CityManager.cs" />
     <Compile Include="ComponentType\VRComponentTypeManager.cs" />
     <Compile Include="ConfigManager.cs" />
+    <Compile Include="GenericLKUP\GenericLKUPBEDefinitionSettings.cs" />
+    <Compile Include="GenericLKUP\GenericLKUPManager.cs" />
     <Compile Include="StatusDefinitionFilterContext.cs" />
     <Compile Include="VRActionAudit\VRActionAuditLKUPManager.cs" />
     <Compile Include="VRActionAudit\VRActionAuditManager.cs" />
